--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,56 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+html,
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply font-body text-white;
+}
+
+.mapboxgl-popup-content {
+  background-color: #131010 !important;
+}
+
+.popup-container {
+  background-color: #131010;
+  color: #f0bb78;
+  padding: 1rem;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.popup-title {
+  color: #f0bb78;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.popup-button {
+  background: #f0bb78;
+  color: #131010;
+  border: none;
+  padding: 0.5rem 0.5rem;
+  font-size: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.popup-button:hover {
+  background: #fff0dc;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
